# vcf_annotator

./: .dockerignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: pull-request.yml  release.yml
docs/: USAGE.md
tests/: test_cli.py  test_components.py  test_splicedistance.py
tests/data/: GCA_000001405.15_GRCh38_full_analysis_set.refseq_annotation.sample.genepred  MANE.GRCh38.v1.4.summary.sample.txt  MANE.GRCh38.v1.5.summary.sample.txt  custom.vcf  input.vcf  mane.tsv  sample.genePred
tests/features/: splice_distance.feature
vcf_annotator/: __init__.py  chromosome.py  cli.py  processor.py  transcripts.py  variant_utils.py
vcf_annotator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vcf_annotator/annotators/: __init__.py  base.py  custom_vcf.py  splice_distance.py
